--- a/client/package.json
+++ b/client/package.json
@@ -21,5 +21,6 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.3",
     "react-test-renderer": "^16.0.0"
-  }
+  },
+    "proxy":"http://localhost:3001"
 }
