--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "serve": "concurrently \"PORT=3001 npm start\" \"cd client && npm start\""
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -14,5 +15,8 @@
     "mongoose": "^4.13.2",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0"
   }
 }
