--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "serve": "concurrently \"PORT=3001 npm start\" \"cd client && npm start\""
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "jade": "~1.11.0",
     "mongoose": "^4.13.2",
     "morgan": "~1.9.0",
