--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.13.2",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.4.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
