--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "jade": "~1.11.0",
+    "moment": "^2.19.3",
     "mongoose": "^4.13.2",
     "morgan": "~1.9.0",
     "nodemailer": "^4.4.0",
