--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "history": "^4.7.2",
+    "moment": "^2.19.3",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
+    "react-moment": "^0.6.8",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
