--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "body-parser": "~1.18.2",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
+    "csv": "^2.0.0",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "fast-csv": "^2.4.1",
     "jade": "~1.11.0",
     "moment": "^2.19.3",
     "mongoose": "^4.13.2",
