--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "fast-csv": "^2.4.1",
     "jade": "~1.11.0",
+    "junk": "^2.1.0",
     "moment": "^2.19.3",
     "mongoose": "^4.13.2",
     "morgan": "~1.9.0",
