--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
+    "google-maps-react": "^1.1.2",
     "history": "^4.7.2",
     "moment": "^2.19.3",
     "react": "^16.0.0",
