--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "junk": "^2.1.0",
     "moment": "^2.19.3",
     "mongoose": "^4.13.2",
+    "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.0",
     "nodemailer": "^4.4.0",
     "serve-favicon": "~2.4.5"
