--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.4.5",
+    "react-loading": "^1.0.3",
     "react-moment": "^0.6.8",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
